[gd_scene load_steps=6 format=2]

[ext_resource path="res://buildings/AlliedController.gd" type="Script" id=1]
[ext_resource path="res://buildings/BarracksPlacer.tscn" type="PackedScene" id=2]
[ext_resource path="res://buildings/BarracksPlacer.gd" type="Script" id=3]
[ext_resource path="res://BuildingsController.gd" type="Script" id=4]
[ext_resource path="res://buildings/UnitsController.gd" type="Script" id=5]

[node name="AlliedController" type="Node2D"]
script = ExtResource( 1 )

[node name="UnitsController" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="BuildingsController" type="Node2D" parent="."]
z_index = -2
script = ExtResource( 4 )

[node name="BarracksPlacer" type="Node2D" parent="BuildingsController" instance=ExtResource( 2 )]
z_index = 1
script = ExtResource( 3 )
[connection signal="register_units" from="UnitsController" to="." method="_on_UnitsController_register_units"]
[connection signal="barracks_done" from="BuildingsController" to="." method="_on_BuildingsController_barracks_done"]
[connection signal="barracks_placed" from="BuildingsController" to="." method="_on_BuildingsController_barracks_placed"]
[connection signal="place_barracks" from="BuildingsController/BarracksPlacer" to="BuildingsController" method="_on_BarracksPlacer_place_barracks"]
